<resources>
    <string name="app_name">Kingdomino</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main_menu">Main Menu</string>
    <string name="menu_game">Game</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_appendix">Appendixes</string>

    <string name="game_modifier_dynasty">Dynasty</string>
    <string name="game_modifier_middle_kingdom">The Middle Kingdom</string>
    <string name="game_modifier_harmony">Harmony</string>
    <string name="game_modifier_mighty_duel">The Mighty Duel</string>

    <string name="btn_new_game">New Game</string>
    <string name="btn_continue_game">Continue</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_rules">Rules</string>
    <string name="btn_credits">Credits</string>

    <string name="settings_confirm_on_play">Confirm on play</string>

    <string name="seed">Seed</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>


    <string name="player_score">Score : %d</string>
    <string name="empty_deck">Empty deck! Shuffling…</string>
    <string name="drawing_cards">Drawing 4 new cards…</string>
    <string name="error_play_tile">Could not play selected tile at this location</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="create_new_game">Create New Game</string>
    <string name="error_wrong_field">Cannot play on another player\'s field. Please play on your own field.</string>
    <string name="confirmPlayCard">Are you sure you want to play card %1$d at the displayed location?</string>
    <string name="error_select_card">Card %1$d has already been used this turn. Cannot re-use a card. Select another one.</string>

    <string name="score_domain_size">Domain size: %1$d</string>
    <string name="score_crown_count">Amount of crowns: %1$d</string>
    <string name="score_castle_centered">Castle centered: %1$s</string>
    <string name="score_value">Score: %1$s</string>
    <string name="score_title">%1$s - Modifier(s): %2$s</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="preferences_started_games">shared_preferences_started_games</string>
    <string name="preferences_ended_games">shared_preferences_ended_games</string>
</resources>