<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MainMenuFragment">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_buttons"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <Button
            android:id="@+id/btn_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_new_game" />

        <Button
            android:id="@+id/btn_continue_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue_game" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_settings" />

        <Button
            android:id="@+id/btn_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rules" />

        <Button
            android:id="@+id/btn_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_credits" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>