<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/img_score_player_crown"
        android:layout_width="122dp"
        android:layout_height="122dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_castle_red" />

    <TextView
        android:id="@+id/lbl_score_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="John Doe"
        app:layout_constraintTop_toTopOf="@id/img_score_player_crown"
        app:layout_constraintStart_toEndOf="@id/img_score_player_crown"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/lbl_score_domain_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_domain_size"
        app:layout_constraintTop_toBottomOf="@id/lbl_score_player_name"
        app:layout_constraintStart_toEndOf="@id/img_score_player_crown"/>

    <TextView
        android:id="@+id/lbl_score_centered_castle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_castle_centered"
        app:layout_constraintStart_toEndOf="@id/img_score_player_crown"
        app:layout_constraintTop_toBottomOf="@id/lbl_score_crown_count"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lbl_score_crown_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_crown_count"
        app:layout_constraintStart_toEndOf="@id/img_score_player_crown"
        app:layout_constraintTop_toBottomOf="@id/lbl_score_domain_size"/>

    <TextView
        android:id="@+id/lbl_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_value"
        android:textSize="24sp"
        android:padding="@dimen/dis"
        app:layout_constraintTop_toBottomOf="@id/lbl_score_player_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>