<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.iteration.kingdomino.ui.menu.NewGameBottomSheet" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomDrawer"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <TextView
            android:id="@+id/newGameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/btn_new_game"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/modifierChipsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/newGameTitle"
            app:layout_constraintBottom_toTopOf="@id/newGamePlayersRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.chip.Chip
                android:id="@+id/modifierDynastyCheckBox"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_modifier_dynasty"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/modifierMiddleKingdomCheckBox"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_modifier_middle_kingdom"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/modifierHarmonyCheckBox"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_modifier_harmony"
                 />

            <com.google.android.material.chip.Chip
                android:id="@+id/modifierMightyDuelCheckBox"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_modifier_mighty_duel"/>

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:flow_wrapMode="aligned"
                android:orientation="horizontal"
                app:flow_horizontalAlign="start"
                app:flow_maxElementsWrap="4"
                app:constraint_referenced_ids="modifierDynastyCheckBox, modifierMiddleKingdomCheckBox, modifierHarmonyCheckBox, modifierMightyDuelCheckBox"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newGamePlayersRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dis"
            app:layout_constraintTop_toBottomOf="@id/modifierChipsContainer"
            app:layout_constraintBottom_toTopOf="@id/newGameAdvancedParametersContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPlayerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_player_button"
            android:layout_margin="@dimen/dis"
            app:layout_constraintTop_toBottomOf="@id/newGamePlayersRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/newGameAdvancedParametersContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dis"
            app:layout_constraintTop_toBottomOf="@id/addPlayerButton"
            app:layout_constraintBottom_toTopOf="@id/newGameConfirmButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newGameSeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:text="123456"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newGameConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

